Changes for 3.2.7rc1

New features:

Bug fixes:
.......PS. [ZBX-12046] fixed handling of database failure during ID selection (vso)
..F....... [ZBX-11683] fixed problem with lost IDs of unlinkable templates (miks)
.......PS. [ZBX-12142] fixed Oracle batch insert return value (wiper)
..F....... [ZBX-11618] fixed displaying hints with no content inside (miks)
..F....... [ZBX-10546] fixed undefined index error in host import form while importing templates (gcalenko, Ivo)
..F....... [ZBX-11285] fixed cookie vulnerability for tabbed forms (gcalenko)
..F....... [ZBX-11486] fixed duplicated error messages in screens section (miks)
..F....... [ZBX-10807] fixed wrongly displayed field in item prototype form (miks)
..F....... [ZBX-11549] fixed 'numeric value' error in dashboard for php 7 (gcalenko, Sasha)
..F....... [ZBX-11559] fixed jquery binded function call on form submit (miks)
..F....... [ZBX-11677] fixed history page to display values in chronological order (miks)
..F....... [ZBX-11405] fixed conditions to display treeview button in triggers section (miks)
........S. [ZBX-12012] fixed resolving of Critical and Verbose event log levels by {ITEM.LOG.SEVERITY} macro (Sasha)
A......... [ZBX-12093] fixed removing of applications that are created from application prototypes (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.6

New features:
A.F....... [ZBX-1357] updated Czech, English (United States), Korean, Russian, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 3.2.6rc1

Bug fixes:
A.F....... [ZBX-10253] fixed translation string and validation of TLS settings in host.create(), host.update() and host.massUpdate() methods; added variables to hosts array required by CHost::validateUpdate() method (miks)
........S. [ZBX-12121] fixed problem generation by timer process (gleb)